form ajax and bankNum and IDcard

--- a/userInfo.html
+++ b/userInfo.html
@@ -22,7 +22,7 @@
 				<h2>请确认您的身份证信息</h2>
 				<div class="cameraBox">
 					<img class="upLoadImg" src="img/upLoad.png" />
-					<form action="http://lb.qtoubao.cn:9000/insd/upload_fms_pic.tml?uploadType=2001" id="IDcardForm" method="post" style="text-align:center;" enctype="multipart/form-data">  
+					<form id="IDcardForm" method="post" style="text-align:center;" enctype="multipart/form-data">  
 			    		<input type="file" id="file_IDcard" name="file" accept="image/*">
 				       	<input id="submits_IDcard" type="submit" />
 				 	</form>
@@ -97,7 +97,7 @@
 				<h3><span class="green">*</span>上传学历影像文件</h3>
 				<div class="infoCon infoConPush">
 					<img class="eduCamera" src="img/eduCamera.png" />
-					<form action="http://lb.qtoubao.cn:9000/insd/upload_fms_pic.tml?uploadType=2001" id="eduForm" method="post" style="text-align:center;" enctype="multipart/form-data">  
+					<form id="eduForm" method="post" style="text-align:center;" enctype="multipart/form-data">  
 			    		<input type="file" accept="image/*"  name="file" id="file_edu">
 				       	<input id="submits_edu" type="submit" />
 				 	</form>
