--- a/userInfo.html
+++ b/userInfo.html
@@ -176,7 +176,8 @@
 				        <input type="number" class="mui-input-clear" oninput="if(value.length>19)value=value.slice(0,19)" id="bankNum" placeholder="卡号">
 				    </p>
 				</div>
-				<p id="bankCardWarn">注：只支持招商银行卡</p>
+				<p id="bankCardWarn">注：1.只支持招商银行卡</p>
+				<p id="bankCardWarn" style=" margin-top: 0; text-indent: 2em;">2.银行卡信息为非必输信息</p>
 			</div>
 			<p class="nextBox bankCardNextBox">
 				<button class="upBtn bankCardUpBtn">上一步</button>
