--- a/userInfo.html
+++ b/userInfo.html
@@ -41,6 +41,12 @@
 				        <span class="r" id="sexBox"><span class="sexChild sexChildM" data-userId="M"><img class="sexImg" src="img/sex_notSelect.png"/>男</span><span class="mr2 sexChildF sexChild sexClick" data-userId="F"><img class="sexImg" id="F" src="img/sex_select.png"/>女</span></span>
 				    </p>
 				    <p class="mui-input-row">
+				        <label class="firstUN aaa"><span class="green">*</span>民族</label>
+				        <select class="r nation" id="nationList">
+							<option data-nanum="">请选择</option>
+						</select>
+				    </p>
+				    <p class="mui-input-row">
 				        <label class="firstUN"><span class="green">*</span>户籍地址</label>
 				        <textarea class="mui-input-clear" id="houseAdr" rows="1" placeholder="户籍地址"></textarea>
 				        <span class="delX_icon delX" id="delX"></span>
